[tool.poetry]
name = "TDD Sample"
version = "0.1.0"
description = "Sample for TDD"
authors = ["watame <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pdoc = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
